# ApiGateway/api/model/model.go
@@ -1,16 +1,17 @@
 package model
 
-type Useri struct {
-	Id          string   `json:"id"`
-	FirstName   string   `json:"first_name"`
-	LastName    string   `json:"last_name"`
-	Login       string   `json:"login"`
-	Email       []string `json:"email"`
-	Bio         string   `json:"bio"`
-	PhoneNumber []string `json:"phone_number"`
-	TypeId      int64    `json:"type_id"`
-	Status      bool     `json:"status"`
-	Address     Address  `json:"address"`
+type User struct {
+	Id          string  `json:"id"`
+	FirstName   string  `json:"first_name"`
+	LastName    string  `json:"last_name"`
+	Login       string  `json:"login"`
+	Password    string  `json:"password"`
+	Email       string  `json:"email"`
+	Bio         string  `json:"bio"`
+	PhoneNumber string  `json:"phone_number"`
+	TypeId      int64   `json:"type_id"`
+	Status      bool    `json:"status"`
+	Address     Address `json:"address"`
 	Posts       []*Post
 }
 type Address struct {
